<resources>
    <string name="app_name">SlinKotlin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_to_another">Switch To Another</string>
    <string name="transition_page_name">page_name</string>
    <string name="transition_page_abstract">This is a sample of transition animation</string>
    <string name="transition_page_detail">  Jetpack is a suite of libraries, tools, and guidance to help developers write high-quality apps easier. These components help you follow best practices, free you from writing boilerplate code, and simplify complex tasks, so you can focus on the code you care about.

    Jetpack comprises the androidx.* package libraries, unbundled from the platform APIs. This means that it offers backward compatibility and is updated more frequently than the Android platform, making sure you always have access to the latest and greatest versions of the Jetpack components.

    Our official AARs and JARs binaries are distributed through Google Maven.

    You can learn more about using it from Android Jetpack landing page.</string>

    <string name="key_transition_image_photo">key_transition_image_photo</string>
    <string name="key_transition_title">key_transition_title</string>
    <string name="key_transition_abstract">key_transition_abstract</string>
    <string name="key_transition_detail">key_transition_detail</string>
    <string name="close_char">×</string>
    <string name="module_inject">module inject</string>
    <string name="analytics_service">Analytics Service</string>
    <string name="request_info">RequestInfo</string>
    <string name="title_activity_responsive">ResponsiveActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>


</resources>
