<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.slin.study.kotlin.ui.responsive.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.slin.study.kotlin.ui.responsive.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.slin.study.kotlin.ui.responsive.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.slin.study.kotlin.ui.responsive.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>