<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.transition.TransitionDetailActivity"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@drawable/img_ice_princess"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextTitle.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="48dp"
            app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
            app:expandedTitleTextAppearance="@style/TextTitle.Inverse"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_toolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/mask_surface_color" />

                <ImageView
                    android:id="@+id/iv_pageIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="Page Icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_fate_arthur1"
                    android:transitionName="@string/key_transition_image_photo"
                    app:layout_constraintBottom_toBottomOf="@id/tv_pageSubName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_pageSubName"
                    style="@style/TextSubTitle.Inverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:gravity="start"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/transition_page_abstract"
                    android:transitionName="@string/key_transition_abstract"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_pageIcon"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/back_icon_normal"
                app:titleTextAppearance="@style/TextTitle.Inverse"
                tools:title="@string/app_name">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_gaussianBlurRadius"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:indeterminate="false"
                android:max="300" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pageDetail"
                style="@style/TextBody1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:lineSpacingExtra="6dp"
                android:text="@string/transition_page_detail"
                android:transitionName="@string/key_transition_detail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_text_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:onClick="textChange"
                android:text="测试文字"
                android:textColor="@color/color_font_dark_level_1"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>